# license-oas-api/openapi.yaml
@@ -49,6 +49,23 @@ paths:
       responses:
         200:
           description: Key deleted
+  /publisher:
+    get:
+      security:
+        - bearerAuth: [ ]
+        - OAuth2:
+            - publisher:read
+      operationId: getPublishers
+      tags:
+        - Publisher
+      description: Gets all publishers
+      responses:
+        200:
+          $ref: '#/components/responses/PublishersResponse'
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
   /publisher/{publisher}/license:
     get:
       security:
@@ -252,6 +269,14 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/LicenseCheckResult'
+    PublishersResponse:
+      description: All publisher uuids
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              type: string
     LicenseArrayResponse:
       description: License response
       content:
