# license-server/src/main/java/de/netzkronehd/license/controller/LicenseLogsController.java
@@ -10,7 +10,6 @@ import de.netzkronehd.license.security.OAuth2TokenSecurity;
 import de.netzkronehd.license.service.LicenseCheckService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -18,6 +17,10 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.NoSuchElementException;
+
+import static org.springframework.http.HttpStatus.FORBIDDEN;
+import static org.springframework.http.HttpStatus.UNAUTHORIZED;
+import static org.springframework.http.ResponseEntity.*;
 
 @RestController
 @RequiredArgsConstructor(onConstructor_ = {@Autowired})
@@ -31,31 +34,31 @@ public class LicenseLogsController implements LogsApi {
     @Override
     public ResponseEntity<List<LicenseLogDto>> getLicenseLogs(String license) {
         final OAuth2Model model = tokenSecurity.getModel(SecurityContextHolder.getContext().getAuthentication());
-        if (model == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
-        if (!model.isAdmin()) return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+        if (model == null) return status(UNAUTHORIZED).build();
+        if (!model.hasAccess()) return status(FORBIDDEN).build();
 
         try {
-            return ResponseEntity.ok(licenseLogMapper.map(checkService.getLogs(license, model.getSub())).reversed());
+            return ok(licenseLogMapper.map(checkService.getLogs(license, model)).reversed());
         } catch (NoSuchElementException ex) {
-            return ResponseEntity.notFound().build();
+            return notFound().build();
         } catch (PermissionException e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+            return status(FORBIDDEN).build();
         }
     }
 
     @Override
     public ResponseEntity<Void> deleteLicenseLogs(String license) {
         final OAuth2Model model = tokenSecurity.getModel(SecurityContextHolder.getContext().getAuthentication());
-        if (model == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
-        if (!model.isAdmin()) return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+        if (model == null) return status(UNAUTHORIZED).build();
+        if (!model.hasAccess()) return status(FORBIDDEN).build();
 
         try {
-            this.checkService.deleteLogs(license, model.getSub());
-            return ResponseEntity.ok().build();
+            this.checkService.deleteLogs(license, model);
+            return ok().build();
         } catch (NoSuchElementException ex) {
-            return ResponseEntity.notFound().build();
+            return notFound().build();
         } catch (PermissionException e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+            return status(FORBIDDEN).build();
         }
     }
 }
