# license-server/src/main/java/de/netzkronehd/license/model/OAuth2Model.java
@@ -4,11 +4,13 @@ import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.web.authentication.WebAuthenticationDetails;
 
 import java.util.Collection;
 
 import static de.netzkronehd.license.config.SecurityConfig.ROLE_ADMIN;
+import static de.netzkronehd.license.config.SecurityConfig.ROLE_USER;
 
 @Data
 @AllArgsConstructor
@@ -18,6 +20,7 @@ public class OAuth2Model {
     private String sub;
     private WebAuthenticationDetails details;
     private Collection<GrantedAuthority> authorities;
+    private Jwt token;
 
     public boolean hasRole(String role) {
         return authorities.stream().anyMatch(grantedAuthority -> grantedAuthority.getAuthority().equalsIgnoreCase(role));
@@ -25,6 +28,14 @@ public class OAuth2Model {
 
     public boolean isAdmin() {
         return hasRole(ROLE_ADMIN);
+    }
+
+    public boolean isUser() {
+        return hasRole(ROLE_USER);
+    }
+
+    public boolean hasAccess() {
+        return isUser() || isAdmin();
     }
 
 }
