# license-server/src/main/java/de/netzkronehd/license/security/OAuth2TokenSecurity.java
@@ -25,7 +25,8 @@ public class OAuth2TokenSecurity {
             final JwtAuthenticationToken authToken = new JwtAuthenticationToken(jwt);
             return new OAuth2Model(jwt.getClaimAsString("sub"),
                     (WebAuthenticationDetails) authToken.getDetails(),
-                    authToken.getAuthorities()
+                    authToken.getAuthorities(),
+                    jwt
             );
         }
         return null;
@@ -36,7 +37,8 @@ public class OAuth2TokenSecurity {
         if (!(authentication.getPrincipal() instanceof Jwt jwt)) return null;
         return new OAuth2Model(jwt.getClaimAsString("sub"),
                 (WebAuthenticationDetails) authentication.getDetails(),
-                (Collection<GrantedAuthority>) authentication.getAuthorities()
+                (Collection<GrantedAuthority>) authentication.getAuthorities(),
+                jwt
         );
     }
 
